# go/internal/openapi/api/openapi.yaml
@@ -209,54 +209,6 @@ paths:
       summary: Retrieve chain
       tags:
       - Chains
-  /api/v1/endpoints:
-    get:
-      description: List webhook endpoints
-      operationId: v1.webhooks.list
-      parameters:
-      - explode: true
-        in: query
-        name: cursor
-        required: false
-        schema:
-          type: string
-          x-order: "1"
-        style: form
-      - description: "The number of records to return default: 20"
-        explode: true
-        in: query
-        name: limit
-        required: false
-        schema:
-          description: "The number of records to return default: 20"
-          type: integer
-          x-order: "2"
-        style: form
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CursorPage-Endpoint'
-          description: OK
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: Bad Request
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: Internal Server Error
-      security:
-      - ApiKeyAuth: []
-      - SignatureAuth: []
-      summary: List webhook endpoints
-      tags:
-      - Webhook endpoints
   /api/v1/tokens:
     get:
       description: Retrieve a list of all tokens.
@@ -1216,9 +1168,56 @@ paths:
       tags:
       - Addresses
   /api/v1/webhooks/endpoints:
+    get:
+      description: List webhook endpoints
+      operationId: v1.webhooks.endpoint.list
+      parameters:
+      - explode: true
+        in: query
+        name: cursor
+        required: false
+        schema:
+          type: string
+          x-order: "1"
+        style: form
+      - description: "The number of records to return default: 20"
+        explode: true
+        in: query
+        name: limit
+        required: false
+        schema:
+          description: "The number of records to return default: 20"
+          type: integer
+          x-order: "2"
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CursorPage-Endpoint'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      - SignatureAuth: []
+      summary: List webhook endpoints
+      tags:
+      - Webhook endpoints
     post:
       description: Create a webhook endpoint
-      operationId: v1.webhooks.create
+      operationId: v1.webhooks.endpoint.create
       requestBody:
         content:
           application/json:
@@ -1254,7 +1253,7 @@ paths:
   /api/v1/webhooks/endpoints/{endpointId}:
     delete:
       description: Delete specific webhook endpoint
-      operationId: v1.webhooks.delete
+      operationId: v1.webhooks.endpoint.delete
       parameters:
       - description: Endpoint ID
         explode: false
@@ -1291,7 +1290,7 @@ paths:
       - Webhook endpoints
     get:
       description: Get specific webhook endpoint
-      operationId: v1.webhooks.retrieve
+      operationId: v1.webhooks.endpoint.retrieve
       parameters:
       - description: Endpoint ID
         explode: false
@@ -1334,7 +1333,7 @@ paths:
       - Webhook endpoints
     patch:
       description: Update specific webhook endpoint
-      operationId: v1.webhooks.update
+      operationId: v1.webhooks.endpoint.update
       parameters:
       - description: Endpoint ID
         explode: false
@@ -1364,6 +1363,54 @@ paths:
       summary: Update webhook endpoint
       tags:
       - Webhook endpoints
+  /api/v1/webhooks/events:
+    get:
+      description: List webhook event types
+      operationId: v1.webhooks.events.list
+      parameters:
+      - explode: true
+        in: query
+        name: cursor
+        required: false
+        schema:
+          type: string
+          x-order: "1"
+        style: form
+      - description: "The number of records to return default: 100"
+        explode: true
+        in: query
+        name: limit
+        required: false
+        schema:
+          description: "The number of records to return default: 100"
+          type: integer
+          x-order: "2"
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CursorPage-EventType'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      - SignatureAuth: []
+      summary: List webhook event types
+      tags:
+      - Webhook events
 components:
   schemas:
     Address:
@@ -1712,6 +1759,39 @@ components:
       - has_prev
       - items
       - total
+    CursorPage-EventType:
+      example:
+        prev_cursor: prev_cursor
+        next_cursor: next_cursor
+        total: 0
+        has_next: true
+        has_prev: true
+        items:
+        - name: name
+          description: description
+        - name: name
+          description: description
+      properties:
+        has_next:
+          type: boolean
+        has_prev:
+          type: boolean
+        items:
+          items:
+            $ref: '#/components/schemas/EventType'
+          type: array
+          uniqueItems: false
+        next_cursor:
+          type: string
+        prev_cursor:
+          type: string
+        total:
+          type: integer
+      required:
+      - has_next
+      - has_prev
+      - items
+      - total
     CursorPage-Token:
       example:
         prev_cursor: prev_cursor
@@ -2008,6 +2088,15 @@ components:
       required:
       - amount
       - token_id
+    EventType:
+      example:
+        name: name
+        description: description
+      properties:
+        description:
+          type: string
+        name:
+          type: string
     Fee:
       description: Fee
       example:
@@ -2273,8 +2362,6 @@ components:
           type: string
         url:
           type: string
-      required:
-      - eventTypes
     UpdateTokenRequest:
       example:
         uid: uid
